--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<!-- 我永远喜欢竹逹彩奈 -->
-<!-- I Love Taketatsu Ayana Forever. -->
+<!-- 
+    反正也不会有人查看源代码
+    偷偷写点东西也不会有人看见吧
+
+    我永远喜欢竹逹彩奈 !
+    I Like Taketatsu Ayana Forever!
+ -->
 
 <head>
     <meta charset="UTF-8">
